BG-3569: Move java options to test scope